# Efficient-Reinforcement-Learning-with-Transition-Dependent-LMDPs-and-Entropy-Regularization

./: .gitignore  MDP.py  README.md  algorithms.py  concatenate_images.py  custom_palette.py  grid.py  grid_world.py  main.py  maps.py  minigrid_env.py  pyproject.toml  requirements.txt  state.py  stats.py  test.py  test1.txt  test2.txt
assets/: parallel_p_table.txt  parallel_p_table_amd.txt  parallel_p_table_intel.txt  parallel_p_table_m4.txt  vi_pi_table.txt
assets/benchmark/: iterative_vs_vectorized_embedding.txt  value_iteration_comparison.txt
assets/exploration/gridworld_cliff/: results.txt
assets/exploration/minigrid_challenge_door/: results.txt
assets/exploration/minigrid_cliff/: results.txt
domains/: grid.py  grid_world.py  minigrid_env.py
models/: LMDP.py  LMDP_TDR.py  MDP.py  __init__.py  utils.py
test/: test_custom_grid.py  test_gridworld.py  test_minigrid.py  test_vectorized_embedding.py
utils/: benchmarks.py  coloring.py  experiments.py  maps.py  spinner.py  state.py  stats.py  utils.py
