[project]
name = "repo"
version = "0.1.0"
description = "My Bachelor's thesis project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.0",
    "matplotlib>=3.10.1",
    "minigrid>=3.0.0",
    "numpy>=2.2.5",
    "pygame>=2.6.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.13.2",
]
